--- a/templates/chunks/list_users.html
+++ b/templates/chunks/list_users.html
@@ -1,73 +1,53 @@
 {% extends "base.html" %}
-
 {% block css %}
-<link rel="stylesheet" href="{{ STATIC_URL }}css/chunks.css" type="text/css" />
-<link rel="stylesheet" href="{{ STATIC_URL }}css/dashboard.css" type="text/css" />
-{{ block.super }}
+  <link rel="stylesheet" href="{{ STATIC_URL }}css/chunks.css" type="text/css" />
+  <link rel="stylesheet" href="{{ STATIC_URL }}css/dashboard.css" type="text/css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="{{ STATIC_URL }}css/list_users.css" type="text/css" />
+  {{ block.super }}
 {% endblock %}
-
+{% block js %}
+  {{ block.super }}
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+{% endblock %}
 {% block content %}
-{% load chunk_extras %}
-
-<div id='toggle-buttons'>
-  <button id='toggle-chunks' onclick="$('.chunk').fadeToggle()">Toggle Chunks</button>
-  <button id='toggle-tasks' onclick="$('.task').toggleToggle()">Toggle Tasks</button>
-</div>
-
-{{data}}
-
-<form action='' method='post'>{% csrf_token %}
-  <input type='submit' value='Simulate'>
-</form>
-
-<div id=user-chunk-list>
-  {% for user_data in users_data %}
-    <div class='user-chunk'>
-      <div class = '{% if user_data.has_chunks > 0 %}multi-chunks{% else %} zero-chunk {% endif %}'>
-        <span class='author'>{{user_data.user.first_name}} {{user_data.user.last_name}}, {{user_data.user.username}}</span>
-        <span class='author-role'>{{user_data.user.profile.get_role_display}}</span>
-      </div>
-
-      {% for task in user_data.tasks %}
-      <div class='task {% if task.completed %}completed-task{% endif %}'>
-        {{task.chunk.name}}, by {{task.author.first_name}} {{task.author.last_name}}
-
-        <div class='chunk-info'>
-          {% for reviewer_group in task.reviewers_dicts %}
-            <div class='reviewers-col'>
-              {% if reviewer_group|length_is:"0" %}
-                <span style='color: white'>i</span>
-              {% endif %}
-              {% for reviewer in reviewer_group %}
-                <div class='{% if not reviewer.completed %}un{% endif %}completed'>{{reviewer.username}} [{{reviewer.count}}]</div>
+  <form action='' method='post'>{% csrf_token %}
+    <input type='submit' value='Simulate'>
+  </form>
+  <div class="table-responsive">
+    {% for user_role, user_role_data in users_data.items %}
+      {% for user_data in user_role_data %}
+        <table class="table table-condensed user-table">
+          <tbody>
+            <tr><th colspan="2" class="gray-background"><span class="member-info">{{user_data.user.first_name}} {{user_data.user.last_name}}, {{user_data.user.username}}</span> <span class="membership-role">({{user_role}})</span></th></tr>
+            <tr>
+              {% for type, chunks in user_data.chunks.items %}
+                <td class="td-chunk"><table class="table table-condensed">
+                  <thead class="gray-background">
+                    <tr>
+                      <th colspan="1">{{type}} chunk(s)</th>
+                      <th colspan="10">reviewers</th>
+                    </tr>
+                  </thead>
+                  {% for chunk in chunks %}
+                    <tr class='{{type}}'>
+                      <th>{{chunk.chunk.name}}</th>
+                      {% for role, reviewers in chunk.reviewers.items %}
+                        {% for reviewer in reviewers %}
+                          <td class='{{role}}'>{{reviewer.username}}</td>
+                        {% endfor %}
+                      {% endfor %}
+                    </tr>
+                  {% endfor %}
+                </table></td>
               {% endfor %}
-            </div>
-          {% endfor %}
-        </div>
-
-      </div>
+            </tr>
+          </tbody>
+        </table>
       {% endfor %}
-
-      {% for chunk in user_data.chunks %}
-      <div class='chunk {% if chunk.reviewer_count > 0 %}multi-reviewer-chunk{% else %}zero-reviewer-chunk{% endif %}'>
-        <a class='chunk-link' href='/chunks/view/{{chunk.id}}'>{{chunk.name}}</a>
-        <div class='chunk-info'>
-          {% for reviewer_group in chunk.reviewers_dicts %}
-          <div class='reviewers-col'>
-            {% if reviewer_group|length_is:"0" %}
-              <span style='color: white'>i</span>
-            {% endif %}
-              {% for reviewer in reviewer_group %}
-                <div class='{% if not reviewer.completed %}un{% endif %}completed'>{{reviewer.username}} [{{reviewer.count}}]</div>
-              {% endfor %}
-            </div>
-          {% endfor %}
-        </div>
-      </div>
-      {% endfor %}
-
-    </div>
-  {% endfor %}
-</div>
-
+    {% endfor %}
+  </div>
 {% endblock %}
