--- a/templates/chunks/list_users.html
+++ b/templates/chunks/list_users.html
@@ -14,9 +14,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 {% endblock %}
 {% block content %}
-  <form action='../simulate' method='post'>{% csrf_token %}
+  <!-- <form action='../simulate' method='post'>{% csrf_token %}
     <input type='submit' value='Simulate'>
-  </form>
+  </form> -->
+  <!-- <div class=""><button type="button" class="btn btn-default" class="configure-routing-btn">simulate</button></div> -->
 
   <div class="table-responsive">
     {% for user_role, user_role_data in users_data.items %}
